<resources>
    <string name="app_name">ECOnnect</string>
    <string name="products_name">Products</string>
    <string name="companies_name">Companies</string>
    <string name="forum_name">Forum</string>
    <string name="profile_name">Profile</string>
    <string name="google_client_id" translatable="false">143740353566-ork4rg1f38a7pqv0shd6kebk7oshbnj6.apps.googleusercontent.com</string>
    <string name="register_fragment_label">Join ECOnnect</string>
    <string name="login_fragment_label">Login</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login_button_text">LOG IN</string>
    <string name="password_textbox_hint">Password</string>
    <string name="email_textbox_hint">Email</string>
    <string name="logo">logo</string>
    <string name="new_account_button_text">Create new account</string>
    <string name="postal_code_text">Postal Code</string>
    <string name="username_textbox_hint">User Name</string>
    <string name="register_button_text">REGISTER</string>
    <string name="already_have_an_account_text">Already have an account</string>
    <string name="search_products_hint">Search</string>
    <string name="log_out">Log Out</string>
    <string name="filter_type_text">Filter by product type</string>
    <string name="filter_type_hint">Product Type</string>
    <string name="product_image_description">Product image</string>
    <string name="star_image_description">Star</string>
    <string name="questions_text">Questions</string>
    <string name="add_rating_button_text">Add rating</string>
    <string name="vote_option_yes">Yes</string>
    <string name="vote_option_no">No</string>
    <string name="vote_option_yes_description">Vote Yes</string>
    <string name="vote_option_no_description">Vote No</string>
    <string name="num_votes_text">%d votes</string>
    <string name="num_votes_text_one">%d vote</string>
    <string name="question_text_and_votes">%s - %d votes</string>
    <string name="question_text_and_votes_one">%s - %d vote</string>
    <string name="filter_tag_hint">Search by tag</string>
    <string name="tag_posts_count">%d posts</string>
    <string name="tag_posts_count_one">%d post</string>
    <string name="like_post_description">Like post</string>
    <string name="dislike_post_description">Dislike post</string>
    <string name="post_image_description">Image attached to post</string>
    <string name="user_medal_description">User medal</string>
    <string name="check_out_econnect">"Check out ECOnnect at "</string>
    <string name="on_econnect">%s on ECOnnect:</string>
    <string name="invalid_date_warning">Invalid date</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="hours_ago_one">%d hour ago</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="minutes_ago_one">%d minute ago</string>
    <string name="delete_hint">Delete</string>
    <string name="warning">Warning</string>
    <string name="delete_account_text">You are going to delete your account. Write \'I ACCEPT\' to confirm.</string>
    <string name="i_accept_text">I ACCEPT</string>
    <string name="cancel">Cancel</string>
    <string name="delete">DELETE</string>
    <string name="write_your_opinion">Write your opinion:</string>
    <string name="add_post">Create Post</string>
    <string name="new_post_hint">Text</string>
    <string name="post_add_image">(Optional) Add image:</string>
    <string name="remove_image">Remove image</string>
    <string name="send_review">REVIEW</string>
    <string name="password">password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="active_medal">Active medal</string>
    <string name="medals_text">Medals</string>
    <string name="edit_profile">Edit profile</string>
    <string name="private_account_toggle">Private account</string>
    <string name="change_active_medal_text">Do you want to change your active medal for the one you just selected?</string>
    <string name="change_attributes">change attributes</string>
    <string name="change_password">Change password</string>
    <string name="account">Account</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_delete_account">Delete Account</string>
    <string name="about_text">About me</string>
    <string name="seats">Free seats:</string>
    <string name="carpool_start">Start:</string>
    <string name="carpool_destination">Destination:</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="change_profile_image">Change Image</string>
    <string name="translate">Change Language</string>
    <string name="change_language">Select your language (requires app restart):</string>
    <string name="english">English</string>
    <string name="catalan">Catalan</string>
    <string name="spanish">Spanish</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_just_unlocked_this_medal">You just unlocked this medal:</string>
    <string name="medal_none">No medal</string>
    <string name="medal_eficiencia_a">A home efficiency</string>
    <string name="medal_eficiencia_b">B home efficiency</string>
    <string name="medal_eficiencia_c">C home efficiency</string>
    <string name="medal_eficiencia_d">D home efficiency</string>
    <string name="medal_eficiencia_e">E home efficiency</string>
    <string name="medal_eficiencia_f">F home efficiency</string>
    <string name="medal_eficiencia_g">G home efficiency</string>
    <string name="medal_empresa_or">Review 20 companies</string>
    <string name="medal_empresa_plata">Review 10 companies</string>
    <string name="medal_empresa_bronze">Review 1 company</string>
    <string name="medal_producte_or">Review 20 products</string>
    <string name="medal_producte_plata">Review 10 products</string>
    <string name="medal_producte_bronze">Review 1 product</string>
    <string name="medal_forum_or">Make 25 forum posts</string>
    <string name="medal_forum_plata">Make 10 forum posts</string>
    <string name="medal_forum_bronze">Make 1 forum post</string>
    <string name="medal_like_or">Like/dislike 100 posts</string>
    <string name="medal_like_plata">Like/dislike 20 posts</string>
    <string name="medal_like_bronze">Like/dislike 1 post</string>
    <string name="medal_pregunta_or">Answer 50 questions</string>
    <string name="medal_pregunta_plata">Answer 15 questions</string>
    <string name="medal_pregunta_bronze">Answer 1 question</string>
    <string name="not_unlocked_yet">Not unlocked yet</string>
    <string name="my_home">My home</string>
    <string name="type_exactly">You must type exactly \'%s\' (in uppercase)</string>
    <string name="stack_trace_clipboard">Stack trace copied to clipboard</string>
    <string name="language_applied_when_restarted">Language changes will be applied next time the app is restarted</string>
    <string name="want_to_logout">Are you sure you want to log out?</string>
    <string name="ok">OK</string>
    <string name="could_not_delete_account">"Could not delete account: "</string>
    <string name="account_deleted">Account deleted successfully. Returning to login…</string>
    <string name="could_not_update_medal">"Could not update the active medal: "</string>
    <string name="no_account_found">No account found for this email</string>
    <string name="server_error_code">"The server responded with error code "</string>
    <string name="session_expired_exception">This session has expired, please logout and try again</string>
    <string name="profile_is_private">The profile of this user is private</string>
    <string name="username_taken">This username has already been taken</string>
    <string name="company_does_not_exist">The company with id %d does not exist</string>
    <string name="post_insertion_error">The server was unable to create this post</string>
    <string name="post_does_not_exist">The post with id %d does not exist</string>
    <string name="delete_post_not_owner">You don\'t have permission to delete this post</string>
    <string name="post_not_exists">The post with id %d does not exist</string>
    <string name="incorrect_password">Incorrect password for this email</string>
    <string name="account_suspended">Your account has been suspended!</string>
    <string name="error_ping">Error sending ping to server:</string>
    <string name="server_not_responding">Warning: Server is not responding to ping</string>
    <string name="invalid_response">Warning: Server returned invalid response to ping</string>
    <string name="ping_expected">(expected \'%s\')</string>
    <string name="product_type_not_exists">The product type %s does not exist</string>
    <string name="product_id_not_found">The product with id %d does not exist</string>
    <string name="old_password_incorrect">The old password is incorrect</string>
    <string name="email_exists">There is already an account with this email</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="incorrect_medal">This medal is incorrect</string>
    <string name="image_upload_failed">Image upload failed</string>
    <string name="could_not_fetch_companies">Could not fetch companies:</string>
    <string name="nearby_companies">Nearby companies</string>
    <string name="could_not_get_home">Could not get home location:</string>
    <string name="could_not_fetch_carpool">Could not fetch carpool points:</string>
    <string name="could_not_connect_elektrogo">Couldn\'t connect to ElektroGo server, please enable the UPC VPN</string>
    <string name="download_elektrogo">Download the ElektroGo app for more info</string>
    <string name="elektrogo_website" translatable="false">https://marccastellsdostal.wixsite.com/elektrogo</string>
    <string name="could_not_get_location_permission">Could not get location permission</string>
    <string name="must_fill_text">You have to fill the text field</string>
    <string name="could_not_create_post">"Could not add new post: "</string>
    <string name="could_not_convert_uri_file">"Could not convert URI to File: "</string>
    <string name="invalid_generated_url">"The generated URL is invalid: "</string>
    <string name="could_not_fetch_tags">Could not fetch tags:</string>
    <string name="could_not_fetch_posts">Could not fetch posts:</string>
    <string name="playstore_base_url" translatable="false">https://play.google.com/store/apps/details?id=</string>
    <string name="delete_post">Delete post</string>
    <string name="want_to_delete_post">Are you sure you want to delete your post?</string>
    <string name="could_not_delete_post">Could not delete post:</string>
    <string name="could_not_cast_vote">Could not cast vote:</string>
    <string name="new_post">New post</string>
    <string name="could_not_get_company_info">Could not get company info:</string>
    <string name="missing_stars">You need to select some stars to review</string>
    <string name="product_details">Product details</string>
    <string name="company_details">Company details</string>
    <string name="could_not_get_product_info">Could not get product info:</string>
    <string name="could_not_add_review">Could not add review:</string>
    <string name="any_type">Any</string>
    <string name="could_not_fetch_types">Could not fetch product types:</string>
    <string name="could_not_fetch_products">Could not fetch products:</string>
    <string name="image_updated">Updating image, this could take some time</string>
    <string name="must_fill_passwords">You have to fill old and new passwords</string>
    <string name="password_conflict">The new password must not be the same as the old one</string>
    <string name="password_updated">Password updated successfully</string>
</resources>