<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterLogin.RegisterFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="229dp"
        android:layout_height="190dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.MediumComponent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.MaterialComponents.MediumComponent"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerUsernameBox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:autofillHints=""
        android:minHeight="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerUsernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_textbox_hint"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerPasswordBox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:minHeight="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_textbox_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerEmailBox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:minHeight="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_textbox_hint"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_register_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/already_have_an_account_text" />

        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button_text"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</LinearLayout>