<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterLogin.LoginFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView2"
        android:layout_width="312dp"
        android:layout_height="210dp"
        android:layout_marginBottom="32dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.MediumComponent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.MaterialComponents.MediumComponent"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmailBox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:autofillHints=""
        android:minHeight="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_textbox_hint"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordBox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:autofillHints=""
        android:minHeight="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/password_textbox_hint"
            android:inputType="textWebPassword"
            android:singleLine="true"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16sp">

    </com.google.android.gms.common.SignInButton>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_login_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/new_account_button_text" />

        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</LinearLayout>